PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/Init_ListWithLiterals.par
Init_ListWithLiterals {


seq main() : Void {
    var [Int] test = init_List([2])

}
}