PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/Init_ListWithLiterals3.par
Init_ListWithLiterals3 {


seq main() : Void {
    var Int a = 2
    var [Int] test = init_List()

}
}